Fix translations, ffprobe probing, and tab completion